--- a/src/components/search-box/searchBox.css
+++ b/src/components/search-box/searchBox.css
@@ -2,8 +2,9 @@
   /* -webkit-appearance: none; */
   border: none;
   outline: none;
-  padding: 10px;
+  padding: 5px;
+  padding-left: 45px;
   width: 150px;
   line-height: 30px;
-  margin-bottom: 30px;
+  margin: 10px auto 30px;
 }
