--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Kalam&display=swap');
+
+* {
+  font-family: 'Kalam', cursive;
+}
+
 body {
   margin: 0;
   padding: 0;
@@ -10,4 +16,10 @@ body {
       rgba(7, 27, 82, 1) 0%,
       rgba(0, 128, 128, 1) 100%);
   text-align: center;
+}
+
+.title {
+  font-size: 40px;
+  color: #0ccac4;
+  letter-spacing: 5px;
 }
